# yerevan-outage-dashboard

./: README.md  app.py  data.py  pyproject.toml  source_schema.sql
