[project]
name = "vtar-dashboard"
version = "0.1.0"
description = "Streamlit dashboard for Yerevan utility outages"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "psycopg2-binary>=2.9.11",
    "pydeck>=0.9.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.54.0",
    "streamlit-folium>=0.26.2",
]

[tool.poetry]
package-mode = false

